Fixed styles for readability.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,7 +16,7 @@ code {
 p {
 	text-align: justify;
 }
-a code {
+a code, a strong {
 	color: var(--t-active) !important;
 }
 
